--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="textNoMensaje">
     
-                    <img src="imagenes/munheco.png" id="imagen1">
+                    <img src="Imagenes/munheco.png" id="imagen1">
                     <h1 id="texto">Ningún mensaje fue encontrado</h1>
                     <textarea id="texto1" name="name" rows="8" cols="80">Ingresa el texto que desees encriptar o desencriptar</textarea>
                     <button id="copiar" type="button" name="boton-encriptar" onclick="copiar()">¡Copiar!</button>
